Closed Bug 1314565 Opened 8 years ago Closed 8 years ago

PerfSpewer was broken by the mutex ordering change

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

As noted in bug 1309909 comment 12, this change broke the --enable-perf option.
Fix PerfSpewer so that it compiles again, and also make it compile on OSX.
Attachment #8806671 - Flags: review?(nicolas.b.pierron)
Attachment #8806671 - Flags: review?(nicolas.b.pierron) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bdf1a014a11a
Fix PerfSpewer following mutex ordering changes r=nbp
https://hg.mozilla.org/mozilla-central/rev/bdf1a014a11a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: