Bug 1314565 - Fix PerfSpewer following mutex ordering changes r=nbp