js/src/vm/MutexIDs.h
@@ -34,6 +34,7 @@
   _(SimulatorCacheLock,          500) \
   _(Arm64SimulatorLock,          500) \
   _(IonSpewer,                   500) \
+  _(PerfSpewer,                  500) \
   _(TraceLoggerThreadState,      500) \
                                       \
   _(TraceLoggerGraphState,       600)
